--- a/.github/workflows/runpy.yaml
+++ b/.github/workflows/runpy.yaml
@@ -15,6 +15,7 @@ jobs:
         with:
           python-version: '3.x'
       - run: python -m pip install --upgrade pip
+      - run: pip install requests
       - run: python checkin.py
          timeout-minutes:10
         env:
