--- a/.github/workflows/runpy.yaml
+++ b/.github/workflows/runpy.yaml
@@ -10,10 +10,12 @@ jobs:
   runpy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
         with:
           python-version: '3.10'
+      - run: python -m pip install --upgrade pip
+      - run: pip install requests
       - run: python checkin.py
         env:
           GLADOS: ${{ secrets.GLADOS }}
